<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_photo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/camera_vertical_margin"
    android:paddingLeft="@dimen/camera_horizontal_margin"
    android:paddingRight="@dimen/camera_horizontal_margin"
    android:paddingTop="@dimen/camera_vertical_margin"
    tools:context="com.ol.andon.reflex.PhotoActivity">

    <com.ol.andon.reflex.CameraView
        android:id="@+id/opencv_camera_view"
        android:layout_width="1920dp"
        android:layout_height="960dp"
        android:visibility="gone"
        opencv:show_fps="true" />

    <LinearLayout
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/sensor_readings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readings_placeholder"
            android:textColor="@color/textLight" />

        <TextView
            android:id="@+id/pcl_readings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pcl_placeholder"
            android:textColor="@color/textLight" />

        <TextView
            android:id="@+id/tracking_readings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracking_placeholder"
            android:textColor="@color/textLight" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/servoControl"
            >

            <SeekBar
                android:textColor="@color/textLight"
                android:id="@+id/xServoAngle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"  />

            <SeekBar
                android:id="@+id/yServoAngle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                 android:textColor="@color/textLight"/>

            <SeekBar
                android:id="@+id/zForce"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textLight"/>

            <Button
                android:id="@+id/mbSendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="mbSendXYZ"
                android:text="@string/send_button_label" />
            <Button
                android:id="@+id/mbConnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="mbConnect"
                android:text="@string/reconnect_button_label" />

            <Button
                android:id="@+id/takePictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="takePicture"
                android:text="@string/take_picture_button_label" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>


